# -Voice-RAG-Web-search-Agent-

./: README.md  main.py  pyproject.toml  response_example.py
AgentNetwork/: build_agent.py
RAG/: config.py  ingest_doc.py  test.ipynb
db/: redis_setup.py
frontend/vrag-frontend/: next.config.ts  package-lock.json  package.json
frontend/vrag-frontend/app/: globals.css  layout.tsx  page.tsx
tools/: my_tool.py
